# kpu-sim

./: .gitignore  CHANGELOG.md
configs/kpu/: datacenter.yaml  edge_ai.yaml  embodied_ai.yaml  minimal.json  minimal.yaml
docs/: LPDDR5X_memory_pipeline.md  SYSTOLIC_TILE_SCHEDULING.md  efficiency-bug-analysis.md  how-to-configure-and-run-kpu-simulations.md  kpubin-disassembler.md  multi-kernel-fusion-support.md  python-integration-guide.md  roadmap-phase7-onwards.md
docs/design/: amd-gpu-products.md  nvidia-gpu-products.md  tile_caching_architecture.md
docs/development-notes/: data-movement-ISA.txt  next-steps-for-enhancement.txt
docs/sessions/: 2025-12-06_tile_caching_and_timing.md  2025-12-25_benchmarking_and_efficiency_analysis.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  data_movement_isa_matmul.cpp  data_movement_pipeline.cpp  hello_kpu.cpp  kernel_demo.cpp  kernel_graph_demo.cpp  matrix_multiply.cpp  memory_management.cpp  resource_api_demo.cpp  system_config_demo.cpp
examples/kernel/: CMakeLists.txt  matmul_kernel.cpp  mlp_kernel.cpp
examples/python/: README.md  kernel_graph_example.py  test_compiler_regression.py  test_graph_validation.py  test_kernel_validation.py
examples/runtime/: CMakeLists.txt  runtime_demo.cpp
include/sw/benchmark/: benchmark.hpp
include/sw/compiler/: kernel_compiler.hpp
include/sw/kpu/: allocator.hpp  data_types.hpp  kernel.hpp  kernel_graph.hpp  kernel_serializer.hpp  kpu_config_loader.hpp  kpu_simulator.hpp  processor_array_topology.hpp  resource_api.hpp  resource_handle.hpp  resource_stats.hpp
include/sw/kpu/components/: compute_fabric.hpp  dma_engine.hpp  memory_controller.hpp  page_buffer.hpp  sfu.hpp  streamer.hpp  systolic_array.hpp  vector_engine.hpp
include/sw/kpu/isa/: concurrent_executor.hpp  data_movement_isa.hpp  program_executor.hpp  program_serializer.hpp  tile_cache.hpp
include/sw/memory/: address_decoder.hpp
include/sw/runtime/: executor.hpp  runtime.hpp
include/sw/trace/: trace_entry.hpp  trace_exporter.hpp
models/kpu/: CMakeLists.txt  host_T1_KPU.cpp  host_T1_KPU_single_block_matmul.cpp  host_T2_KPU.cpp  host_T2_KPU_single_block_matmul.cpp  host_t100.cpp  matmul_tiled_autonomous.cpp  test_debug_dataflow.cpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/bindings/python/: CMakeLists.txt  kpu_bindings.cpp
src/compiler/: CMakeLists.txt  kernel_compiler.cpp
src/components/compute/: CMakeLists.txt  compute_fabric.cpp  sfu.cpp  systolic_array.cpp
src/components/datamovement/: CMakeLists.txt  dma_engine.cpp  streamer.cpp  vector_engine.cpp
src/components/memory/: CMakeLists.txt  address_decoder.cpp  page_buffer.cpp
src/isa/: CMakeLists.txt  concurrent_executor.cpp  data_movement_isa.cpp  program_executor.cpp  program_serializer.cpp  tile_cache.cpp
src/runtime/: CMakeLists.txt  executor.cpp  runtime.cpp
src/simulator/: CMakeLists.txt  kernel.cpp  kernel_graph.cpp  kernel_serializer.cpp  kpu_config_loader.cpp  kpu_simulator.cpp  resource_manager.cpp
src/system/: toplevel.cpp
src/trace/: trace_entry.cpp
tests/: CMakeLists.txt  test_main.cpp  test_utilities.hpp
tests/benchmarks/: CMakeLists.txt  test_efficiency_diagnostic.cpp  test_graph_benchmarks.cpp  test_matmul_benchmarks.cpp  test_mlp_benchmarks.cpp
tests/block_mover/: test_block_mover_basic.cpp  test_block_mover_tracing.cpp
tests/compute/: CMakeLists.txt  test_compute_fabric_tracing.cpp  test_sfu.cpp  test_systolic_array.cpp  test_vector_engine.cpp
tests/dma/: test_dma_address_based.cpp  test_dma_basic.cpp  test_dma_debug.cpp  test_dma_performance.cpp  test_dma_tensor_movement.cpp
tests/driver/: CMakeLists.txt  test_all_resources.cpp  test_data_types.cpp  test_kernel.cpp  test_kernel_graph.cpp  test_mlp_kernel.cpp  test_resource_api.cpp
tests/isa/: CMakeLists.txt  test_serialization.cpp
tests/runtime/: CMakeLists.txt  test_executor.cpp  test_runtime.cpp
tests/streamer/: test_streamer_basic.cpp  test_streamer_tracing.cpp
tests/trace/: test_dma_tracing.cpp
tools/: CMakeLists.txt
tools/analysis/: CMakeLists.txt
tools/analysis/kpubin-disasm/: kpubin_disasm.cpp
tools/configuration/kpu-config/: kpu_config.cpp
tools/runner/: CMakeLists.txt  kpu_runner.cpp
tools/runtime/kpu-loader/: schedule_binder.cpp
